# astrbot-t2i-service

./: LICENSE  pyproject.toml
src/: api.py  render.py
