[project]
name = "astrbot-t2i-service"
version = "0.1.0"
description = "A text-to-image rendering service using FastAPI and Playwright."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "playwright>=1.54.0",
    "uvicorn>=0.35.0",
]
